<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".authentication.LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="80sp"
        app:srcCompat="@drawable/breakfast" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="#d8dadb"
        android:textColorLink="@android:color/white" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="#d8dadb"
        android:textColorLink="@android:color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnLoginFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rouned_button_facebook"
        android:text="@string/login_by_facebook"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10sp"
            android:text="@string/sign_up"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10sp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgVietnamFlag"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="changeToVietnamese"
            app:srcCompat="@drawable/iconfinder_280_vietnam_2634458" />

        <ImageView
            android:id="@+id/imgUKFlag"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="changeToEnglish"
            app:srcCompat="@drawable/iconfinder_273_kingdom_2634450" />
    </LinearLayout>

</LinearLayout>